<resources>
    <string name="app_name">New_Trip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trippas">TRIPPAS</string>
    <string name="hello_author">Hello, Author</string>
    <string name="create_your">Create your  </string>
    <string name="trip_with_us">trips with us </string>
    <string name="Lagos">Lagos</string>
    <string name="london">London</string>
    <string name="add_trip">Add trip</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_time">Enter time</string>
</resources>